--- a/pom.xml
+++ b/pom.xml
@@ -295,8 +295,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-site-plugin</artifactId>
                         <version>3.3</version>
-                        <configuration>
-                            <reportPlugins>
+                        <configuration
                                 <plugin>
                                     <artifactId>maven-project-info-reports-plugin</artifactId>
                                     <version>2.7</version>
